minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__create_graph_type_statement_with_type.snap
---
source: minigu/parser/src/parser/impls/catalog.rs
expression: parsed
---
- path:
    - schema:
        - Absolute:
            - - Name: a
              - start: 19
                end: 20
        - start: 18
          end: 20
      objects:
        - - b
          - start: 21
            end: 22
    - start: 18
      end: 22
  kind:
    - Create
    - start: 0
      end: 17
  source:
    - Nested:
        - - Node:
              name: ~
              alias:
                - a
                - start: 42
                  end: 43
              filler:
                - key: ~
                  label_set:
                    - - - Person
                        - start: 44
                          end: 50
                    - start: 44
                      end: 50
                  property_types:
                    - - name:
                          - id
                          - start: 52
                            end: 54
                        value_type:
                          - SignedNumeric:
                              kind:
                                - Int: ~
                                - start: 55
                                  end: 58
                              not_null: false
                          - start: 55
                            end: 58
                      - start: 52
                        end: 58
                    - - name:
                          - name
                          - start: 60
                            end: 64
                        value_type:
                          - String:
                              min_length: ~
                              max_length: ~
                              not_null: false
                          - start: 65
                            end: 71
                      - start: 60
                        end: 71
                - start: 43
                  end: 72
          - start: 41
            end: 73
        - - Edge:
              Pattern:
                name: ~
                direction: Undirected
                left:
                  - Alias: a
                  - start: 91
                    end: 94
                filler:
                  - key: ~
                    label_set:
                      - - - knows
                          - start: 98
                            end: 103
                      - start: 98
                        end: 103
                    property_types:
                      - - name:
                            - since
                            - start: 105
                              end: 110
                          value_type:
                            - SignedNumeric:
                                kind:
                                  - Int: ~
                                  - start: 111
                                    end: 114
                                not_null: false
                            - start: 111
                              end: 114
                        - start: 105
                          end: 114
                  - start: 95
                    end: 117
                right:
                  - Alias: a
                  - start: 118
                    end: 121
          - start: 91
            end: 121
    - start: 23
      end: 135
- start: 0
  end: 135
