minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__create_schema_statement.snap
---
source: minigu/parser/src/parser/impls/catalog.rs
expression: parsed
---
- path:
    - - - Name: a
        - start: 29
          end: 30
      - - Name: b
        - start: 31
          end: 32
    - start: 28
      end: 32
  if_not_exists: true
- start: 0
  end: 32
