minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__drop_index_if_exists.snap
---
source: minigu/gql/parser/src/parser/impls/catalog.rs
assertion_line: 417
expression: parsed_if_exists
---
- DropIndex:
    name:
      - idx_embeddings
      - start: 24
        end: 38
    if_exists: true
- start: 13
  end: 48
