minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__drop_index_statement.snap
---
source: minigu/gql/parser/src/parser/impls/catalog.rs
assertion_line: 409
expression: parsed
---
- DropIndex:
    name:
      - idx_embeddings
      - start: 24
        end: 38
    if_exists: false
- start: 13
  end: 38
