minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__drop_vector_index_if_exists.snap
---
source: minigu/gql/parser/src/parser/impls/catalog.rs
assertion_line: 419
expression: parsed_if_exists
---
- DropVectorIndex:
    name:
      - idx_embeddings
      - start: 31
        end: 45
    if_exists: true
- start: 13
  end: 55
