minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__catalog__tests__drop_vector_index_statement.snap
---
source: minigu/gql/parser/src/parser/impls/catalog.rs
assertion_line: 411
expression: parsed
---
- DropVectorIndex:
    name:
      - idx_embeddings
      - start: 31
        end: 45
    if_exists: false
- start: 13
  end: 45
